  attack.  Report and patch by Adam E.

* Fixed application of "*" in $Conf{BackupFilesOnly} and
  $Conf{BackupFilesExclud} for 2nd and later shares.  Reported
  by Alessandro and Alexander Maringer.

* Fixed email status check in lib/BackupPC/CGI/HostInfo.pl so that
  empty email info doesn't appear; reported by Wayne Trevena,
  and based on patch from Tyler Wagner.

* Wrapped eval() around unpack() in lib/BackupPC/Attrib.pm to avoid
  failures on corrupted attrib files.

* Applied documention patch from Alexander Moisseev.

#------------------------------------------------------------------------
# Version 3.2.0, 31 Jul 2010
#------------------------------------------------------------------------

* Fixed code that detects duplicate shares in bin/BackupPC_dump

* Added fix to lib/BackupPC/Zip/FileMember.pm to avoid bug in
  Archive::Zip 1.30 when creating compressed archives.

* Added Czech translation from Petr Pokorny.

#------------------------------------------------------------------------
# Version 3.2.0beta1, 24 Jan 2010
#------------------------------------------------------------------------

* Fixed FTP xfer method, with help from Holger Parplies and
  Mirco Piccin.  FTP restores are still not supported.

* Fixed bug in BackupPC_sendEmail where a user only receives
  email about one host.

* Fixed bug where top-level attrib file was linked into the pool with
  the wrong digest, caused by it being updated multiple times with
  multiple shares.  Reported by Jeff Kosowsky who also supplied a
  patch.

* Fixed bug in blackout calculation when multiple periods span midnight.
  Report and patch from Joachim Falk.

* Wrapped eval {} around attribute unpacking to make it more robust
  to data corruption.  Path submitted by Tim Connors.

* Ignore fileType 8 and 9 in BackupPC_tarCreate rather than consider then
  errors.  These are sockets and unknown (eg: solaris door) files that
  are created dynamicaly by applications - there is no meaningful restore